src/grammar/CommandLineGrammarParser.py
# Generated from src/grammar/CommandLineGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CommandLineGrammarParser ( Parser ):

    grammarFileName = "CommandLineGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'|'", "'<'", "'>'", "'''", "'\n'", 
                     "'\"'", "'`'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WHITESPACE", "NON_KEYWORD" ]

    RULE_start = 0
    RULE_command = 1
    RULE_pipeCommand = 2
    RULE_callCommand = 3
    RULE_seqCommand = 4
    RULE_atom = 5
    RULE_redirection = 6
    RULE_argument = 7
    RULE_unquoted = 8
    RULE_quoted = 9
    RULE_singleQuoted = 10
    RULE_doubleQuoted = 11
    RULE_backQuoted = 12

    ruleNames =  [ "start", "command", "pipeCommand", "callCommand", "seqCommand", 
                   "atom", "redirection", "argument", "unquoted", "quoted", 
                   "singleQuoted", "doubleQuoted", "backQuoted" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    WHITESPACE=9
    NON_KEYWORD=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.CommandContext,0)


        def EOF(self):
            return self.getToken(CommandLineGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CommandLineGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.command()
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CommandLineGrammarParser.T__0:
                self.state = 27
                self.match(CommandLineGrammarParser.T__0)


            self.state = 30
            self.match(CommandLineGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pipeCommand(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.PipeCommandContext,0)


        def callCommand(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.CallCommandContext,0)


        def seqCommand(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.SeqCommandContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = CommandLineGrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.pipeCommand(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.callCommand()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.seqCommand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.CallCommandContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.CallCommandContext,i)


        def pipeCommand(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.PipeCommandContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_pipeCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeCommand" ):
                return visitor.visitPipeCommand(self)
            else:
                return visitor.visitChildren(self)



    def pipeCommand(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CommandLineGrammarParser.PipeCommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_pipeCommand, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.callCommand()
            self.state = 39
            self.match(CommandLineGrammarParser.T__1)
            self.state = 40
            self.callCommand()
            self._ctx.stop = self._input.LT(-1)
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CommandLineGrammarParser.PipeCommandContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipeCommand)
                    self.state = 42
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 43
                    self.match(CommandLineGrammarParser.T__1)
                    self.state = 44
                    self.callCommand() 
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.ArgumentContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandLineGrammarParser.WHITESPACE)
            else:
                return self.getToken(CommandLineGrammarParser.WHITESPACE, i)

        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.RedirectionContext,i)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.AtomContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.AtomContext,i)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_callCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallCommand" ):
                return visitor.visitCallCommand(self)
            else:
                return visitor.visitChildren(self)




    def callCommand(self):

        localctx = CommandLineGrammarParser.CallCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_callCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CommandLineGrammarParser.WHITESPACE:
                self.state = 50
                self.match(CommandLineGrammarParser.WHITESPACE)


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CommandLineGrammarParser.T__2 or _la==CommandLineGrammarParser.T__3:
                self.state = 53
                self.redirection()
                self.state = 54
                self.match(CommandLineGrammarParser.WHITESPACE)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.argument()
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CommandLineGrammarParser.WHITESPACE:
                        self.state = 62
                        self.match(CommandLineGrammarParser.WHITESPACE)


                    self.state = 65
                    self.atom() 
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(CommandLineGrammarParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeqCommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.CallCommandContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.CallCommandContext,i)


        def pipeCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.PipeCommandContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.PipeCommandContext,i)


        def seqCommand(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.SeqCommandContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_seqCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeqCommand" ):
                return visitor.visitSeqCommand(self)
            else:
                return visitor.visitChildren(self)




    def seqCommand(self):

        localctx = CommandLineGrammarParser.SeqCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_seqCommand)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.callCommand()
                    pass

                elif la_ == 2:
                    self.state = 75
                    self.pipeCommand(0)
                    pass


                self.state = 78
                self.match(CommandLineGrammarParser.T__0)
                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 79
                    self.callCommand()
                    pass

                elif la_ == 2:
                    self.state = 80
                    self.pipeCommand(0)
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 83
                    self.callCommand()
                    pass

                elif la_ == 2:
                    self.state = 84
                    self.pipeCommand(0)
                    pass


                self.state = 87
                self.match(CommandLineGrammarParser.T__0)
                self.state = 88
                self.seqCommand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = CommandLineGrammarParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CommandLineGrammarParser.T__2, CommandLineGrammarParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.redirection()
                pass
            elif token in [CommandLineGrammarParser.T__4, CommandLineGrammarParser.T__6, CommandLineGrammarParser.T__7, CommandLineGrammarParser.NON_KEYWORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.ArgumentContext,0)


        def WHITESPACE(self):
            return self.getToken(CommandLineGrammarParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_redirection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirection" ):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)




    def redirection(self):

        localctx = CommandLineGrammarParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CommandLineGrammarParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(CommandLineGrammarParser.T__2)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CommandLineGrammarParser.WHITESPACE:
                    self.state = 97
                    self.match(CommandLineGrammarParser.WHITESPACE)


                self.state = 100
                self.argument()
                pass
            elif token in [CommandLineGrammarParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(CommandLineGrammarParser.T__3)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CommandLineGrammarParser.WHITESPACE:
                    self.state = 102
                    self.match(CommandLineGrammarParser.WHITESPACE)


                self.state = 105
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.QuotedContext,0)


        def unquoted(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.UnquotedContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = CommandLineGrammarParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argument)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CommandLineGrammarParser.T__4, CommandLineGrammarParser.T__6, CommandLineGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.quoted()
                pass
            elif token in [CommandLineGrammarParser.NON_KEYWORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.unquoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnquotedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(CommandLineGrammarParser.NON_KEYWORD)
            else:
                return self.getToken(CommandLineGrammarParser.NON_KEYWORD, i)

        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_unquoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnquoted" ):
                return visitor.visitUnquoted(self)
            else:
                return visitor.visitChildren(self)




    def unquoted(self):

        localctx = CommandLineGrammarParser.UnquotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unquoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 112
                    self.match(CommandLineGrammarParser.NON_KEYWORD)

                else:
                    raise NoViableAltException(self)
                self.state = 115 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleQuoted(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.SingleQuotedContext,0)


        def doubleQuoted(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.DoubleQuotedContext,0)


        def backQuoted(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.BackQuotedContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuoted" ):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)




    def quoted(self):

        localctx = CommandLineGrammarParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_quoted)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CommandLineGrammarParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.singleQuoted()
                pass
            elif token in [CommandLineGrammarParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.doubleQuoted()
                pass
            elif token in [CommandLineGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.backQuoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleQuotedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_singleQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleQuoted" ):
                return visitor.visitSingleQuoted(self)
            else:
                return visitor.visitChildren(self)




    def singleQuoted(self):

        localctx = CommandLineGrammarParser.SingleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_singleQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(CommandLineGrammarParser.T__4)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CommandLineGrammarParser.T__0) | (1 << CommandLineGrammarParser.T__1) | (1 << CommandLineGrammarParser.T__2) | (1 << CommandLineGrammarParser.T__3) | (1 << CommandLineGrammarParser.T__6) | (1 << CommandLineGrammarParser.T__7) | (1 << CommandLineGrammarParser.WHITESPACE) | (1 << CommandLineGrammarParser.NON_KEYWORD))) != 0):
                self.state = 123
                _la = self._input.LA(1)
                if _la <= 0 or _la==CommandLineGrammarParser.T__4 or _la==CommandLineGrammarParser.T__5:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(CommandLineGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoubleQuotedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def backQuoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandLineGrammarParser.BackQuotedContext)
            else:
                return self.getTypedRuleContext(CommandLineGrammarParser.BackQuotedContext,i)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_doubleQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoubleQuoted" ):
                return visitor.visitDoubleQuoted(self)
            else:
                return visitor.visitChildren(self)




    def doubleQuoted(self):

        localctx = CommandLineGrammarParser.DoubleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_doubleQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(CommandLineGrammarParser.T__6)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CommandLineGrammarParser.T__0) | (1 << CommandLineGrammarParser.T__1) | (1 << CommandLineGrammarParser.T__2) | (1 << CommandLineGrammarParser.T__3) | (1 << CommandLineGrammarParser.T__7) | (1 << CommandLineGrammarParser.WHITESPACE) | (1 << CommandLineGrammarParser.NON_KEYWORD))) != 0):
                self.state = 134
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 132
                    self.backQuoted()
                    pass

                elif la_ == 2:
                    self.state = 133
                    _la = self._input.LA(1)
                    if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CommandLineGrammarParser.T__4) | (1 << CommandLineGrammarParser.T__5) | (1 << CommandLineGrammarParser.T__6))) != 0):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    pass


                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(CommandLineGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackQuotedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CommandLineGrammarParser.CommandContext,0)


        def getRuleIndex(self):
            return CommandLineGrammarParser.RULE_backQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackQuoted" ):
                return visitor.visitBackQuoted(self)
            else:
                return visitor.visitChildren(self)




    def backQuoted(self):

        localctx = CommandLineGrammarParser.BackQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_backQuoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(CommandLineGrammarParser.T__7)
            self.state = 142
            self.command()
            self.state = 143
            self.match(CommandLineGrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.pipeCommand_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def pipeCommand_sempred(self, localctx:PipeCommandContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




